# node-pcre2

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  eslint.config.mjs  package.json  pnpm-lock.yaml  tsconfig.config.json  tsconfig.json  tsconfig.lib.json  tsconfig.vitest.json
.github/workflows/: ci.yml  prebuild.yml  publish.yml
lib/: index.ts
src/: Addon.cpp  InstanceData.cpp  InstanceData.h  MatchAllIterator.cpp  MatchAllIterator.h  PCRE2.cpp  PCRE2.h  PCRE2StringIterator.cpp  PCRE2StringIterator.h  pcre2.cpp
test/: pcre2.spec.mts
